--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@argonjs/argon": "^1.4.0",
     "react": "^16.4.2",
+    "react-aframe-ar": "^1.18.0",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "three": "^0.95.0"
   },
   "scripts": {
     "start": "react-scripts-with-stylus start src/styles/index.styl",
